Enhance CORS configuration in SecurityConfig and application-render.properties
- Updated SecurityConfig to improve CORS handling by refining allowed origins and adding more specific allowed headers.
- Adjusted application-render.properties to streamline configuration, ensuring clarity and organization of settings related to CORS, email, and OAuth2.
- Consolidated comments for better documentation and understanding of the configuration purpose.